@@ -1,4 +1,8 @@
-2006-03-25  Rodney Dawes  <dobey@novell.com>
+2006-03-14  Rodney Dawes  <dobey@novell.com>
+
+  * index.theme.in: Remove MinSize for 48x48 icons, and make apps scalable too
+
+2006-02-25  Rodney Dawes  <dobey@novell.com>
 
 	* NEWS:
 	* configure.in: Update for 2.14.1 release
